--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -396,7 +396,7 @@
           <div class="body">
             <div class="text">
               <h3>Law & Order: Teen Edition</h3>
-              <p>Spin for a scenario, then bring it to life! Try a <strong>mini mock trial</strong> (act it out as judge, jury, lawyers, witnesses), a <strong>sentencing circle (class decides a fair punishment)</strong>, or a <strong>punishment vs. forgiveness debate</strong>. <strong>Rank crimes</strong> from least to most serious, say a punishment and <strong>discuss if it's fair</strong>, create a <strong>news report</strong>, run a <strong>police investigation</strong> with the students' own clues and statements, or make a <strong>comic strip/storyboard</strong> of the case. Great for speaking, writing, critical thinking, creativity, and teamwork.</p>
+              <p>Spin for a scenario, then bring it to life! Try a <strong>mini mock trial</strong> (act it out as judge, jury, lawyers, witnesses), a <strong>sentencing circle</strong> (class decides a fair punishment), or a <strong>punishment vs. forgiveness debate</strong>. <strong>Rank crimes</strong> from least to most serious, say a punishment and <strong>discuss if it's fair</strong>, create a <strong>news report</strong>, run a <strong>police investigation</strong> with the students' own clues and statements, or make a <strong>comic strip/storyboard</strong> of the case. Great for speaking, writing, critical thinking, creativity, and teamwork.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1302,6 +1302,7 @@
 
 </body>
 </html>
+
 
 
 
