--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -410,6 +410,24 @@
           </div>
         </article>
 
+                                            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Mini United Nations</h3>
+              <p>Students become country delegates and tackle global dilemmas through role-play, debate, or creative problem-solving. Spin for a scenario and choose from options like press conferences, hot seats, drafting resolutions, emergency sessions, or creating media such as news reports or posters. A dynamic way to practice speaking, writing, critical thinking, or collaboration while exploring global issues!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/mini-un-icon.png?raw=true"
+                  alt="Mini United Nations icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/mini-un.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
                                 <article class="card">
           <div class="body">
@@ -1302,6 +1320,7 @@
 
 </body>
 </html>
+
 
 
 
