--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -414,7 +414,7 @@
           <div class="body">
             <div class="text">
               <h3>Mini United Nations</h3>
-              <p>Students become country delegates and tackle global dilemmas through role-play, debate, or creative problem-solving. Spin for a scenario and choose from options like <storng>press conferences, hot seats, drafting resolutions, emergency sessions, or creating media such as news reports or posters.</storng> A dynamic way to practice speaking, writing, critical thinking, or collaboration while exploring global issues!</p>
+              <p>Students become country delegates and tackle global dilemmas through role-play, debate, or creative problem-solving. Spin for a scenario and choose from options like <strong>press conferences, hot seats, drafting resolutions, emergency sessions, or creating media such as news reports or posters.</strong> A dynamic way to practice speaking, writing, critical thinking, or collaboration while exploring global issues!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1320,6 +1320,7 @@
 
 </body>
 </html>
+
 
 
 
