--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -336,6 +336,26 @@
           </div>
         </article>
 
+
+          <div class="body">
+            <div class="text">
+              <h3>Kids' Council</h3>
+              <p>Students take on roles in an advisory council to discuss everyday issues and make decisions together. Spin for a scenario and choose from activities such as <strong>debates, role-plays, voting on solutions, or creating posters, announcements, or reports.</strong> A dynamic way to practice speaking, writing, critical thinking, or collaboration while learning about responsibility and fairness!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/kids-council-icon.png?raw=true"
+                  alt="Mini United Nations icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/kids-council.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
+            
                                             <article class="card">
           <div class="body">
             <div class="text">
@@ -1078,6 +1098,7 @@
 
 </body>
 </html>
+
 
 
 
