--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -336,7 +336,7 @@
           </div>
         </article>
 
-
+<article class="card">
           <div class="body">
             <div class="text">
               <h3>Kids' Council</h3>
@@ -1098,6 +1098,7 @@
 
 </body>
 </html>
+
 
 
 
