--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -340,7 +340,7 @@
           <div class="body">
             <div class="text">
               <h3>Kids' Council</h3>
-              <p>Students take on roles in an advisory council to discuss everyday issues and make decisions together. Spin for a scenario and choose from activities such as <strong>debates, role-plays, voting on solutions, or creating posters, announcements, or reports.</strong> A dynamic way to practice speaking, writing, critical thinking, or collaboration while learning about responsibility and fairness!</p>
+              <p>Students take on roles in an advisory council to discuss issues and make decisions together. Spin for a scenario and choose from activities such as <strong>debates, role-plays, voting on solutions, or creating posters, announcements, or reports</strong>. A dynamic way to practice speaking, writing, critical thinking, or collaboration while learning about responsibility and fairness!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1098,6 +1098,7 @@
 
 </body>
 </html>
+
 
 
 
