--- a/mini-un.html
+++ b/mini-un.html
@@ -342,7 +342,7 @@
       "A proposal is made for free global education for all children",
       "A country claims it owns the deepest part of the ocean",
       "A new pandemic spreads from animals to humans",
-      "A global rule is suggested to ban fossil fuels by 2050",
+      "A global rule is suggested to ban fossil fuels within 30 years",
       "A mysterious satellite appears in orbit with no owner",
       "A giant wildfire spreads across three countries’ forests",
       "A country secretly builds robots for war, breaking treaties",
@@ -585,7 +585,6 @@
       "A mysterious signal is received from deep space — who answers it?",
       "A country blocks airplanes carrying emergency aid",
       "A new invention makes plastic disappear but one country controls it",
-      "A global law is suggested to ban all fossil fuels by 2050",
       "A country refuses to allow girls to attend school",
       "A huge volcanic eruption displaces millions of people",
       "A global debate begins about banning space mining",
