--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -392,6 +392,24 @@
         </article>
 
 
+                                                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Shark Tank: Teen Edition</h3>
+              <p>Spin for a product, service, or project, then students design and pitch it to a panel of “sharks” (classmates or teacher). Choose how you play! Add twists like <strong>speed pitches</strong> (only 60 seconds), <strong>written pitches</strong>, or <strong>team roles</strong> (designer, marketer, finance, etc. each present part of the pitch). Boost creativity with <strong>slogans, jingles, posters, or commercials</strong>. Add challenges such as <strong>changing the audience</strong> (kids, parents, teachers, world leaders) or <strong>demanding changes</strong> (make it eco-friendly, cheaper, or cooler). A lively way to build speaking, writing, persuasion, creativity, and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/shark-tank-teen-icon.png?raw=true"
+                  alt="Shark Tank: Teen Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/shark-tank-teen.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                                 <article class="card">
           <div class="body">
             <div class="text">
@@ -1320,6 +1338,7 @@
 
 </body>
 </html>
+
 
 
 
