--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -318,6 +318,25 @@
 
 
             
+                                                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Shark Tank: Kid Edition</h3>
+              <p>Spin for products, services, or projects. Students design and pitch them to a panel of “sharks” (classmates or teacher). Choose how you play! Add twists like <strong>speed pitches</strong> (only 60 seconds) or <strong>written pitches</strong>. Boost creativity with <strong>slogans, jingles, posters, or commercials</strong>. A lively way to build speaking, writing, persuasion, creativity, and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/shark-tank-kid-icon.png?raw=true"
+                  alt="Shark Tank: Kid Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/shark-tank-kid.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+            
                                 <article class="card">
           <div class="body">
             <div class="text">
@@ -1098,6 +1117,7 @@
 
 </body>
 </html>
+
 
 
 
