--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -415,13 +415,7 @@
           <div class="body">
             <div class="text">
               <h3>Focus Group: Teen Edition</h3>
-              <p>Spin for products, services, or business ideas and act as a focus group to react. Play any way you’d like:</p>
-                  <ul>
-<li><strong>🎤 Opinions & Debate</strong> – Use students’ real opinions or assign roles. Give <strong>hot takes</strong> (“Love it / Hate it / Not sure”), <strong>>write opinion pieces</strong, hold a <strong>pro vs. con</strong> debate, <strong>vote on whether to invest</strong>, or <strong>discuss</strong> how other audiences might react (parents, teachers, etc.).</li>
-<li><strong>🎲 Sorting & Ranking</strong> – Place several ideas into <strong>Yes / No / Maybe</strong>, rank the ideas from <strong>most to least useful</strong>, play <strong>Spend Your Budget</strong> (each student spends $500 on what they’d buy), or run a <strong>survivor round</strong> (start with 10 ideas, eliminate until one winner remains).</li>
-<li><strong>🧪 Role-Play & Reflection</strong> – <strong>Role-play product/service/business testers</strong>, <strong>compare to real life</strong>, run an <strong>ethics check</strong> (safe, fair, eco-friendly, inclusive), give it a <strong>future test (how would it work in 5–20 years?)</strong>, or answer questions like <strong>Would I use it? Could it go wrong?</strong></li>
-</ul>
-                        <p>A versatile game that builds speaking, debating, critical thinking, and collaboration!</p>
+              <p>Spin for products, services, or business ideas and act as a focus group to react. <a href="http://outreach360-inc.github.io/games/focus-group.pdf" target="_blank">Play any way you’d like!</a> A versatile game that builds speaking, debating, critical thinking, and collaboration!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1364,6 +1358,7 @@
 
 </body>
 </html>
+
 
 
 
