--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -416,6 +416,7 @@
             <div class="text">
               <h3>Focus Group: Teen Edition</h3>
               <p>Spin for product, service, or business ideas and act as a focus group to react. <a href="http://outreach360-inc.github.io/games/focus-group.pdf" target="_blank">Play any way you’d like!</a> A versatile game that builds speaking, debating, critical thinking, and collaboration!</p>
+                  <br><p><strong>Any of the activities can be adapted into writing tasks!</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1358,6 +1359,7 @@
 
 </body>
 </html>
+
 
 
 
