--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -336,6 +336,26 @@
           </div>
         </article>
 
+
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Focus Group: Kid Edition</h3>
+              <p>Spin for product, service, or business ideas and act as a focus group to react. <a href="http://outreach360-inc.github.io/games/focus-group1.pdf" target="_blank">Play any way you’d like!</a> A versatile game that builds speaking, debating, critical thinking, and collaboration!</p>
+                  <br><p><strong>Any of the activities can be adapted into writing tasks!</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/focus-group-kid-icon.png?raw=true"
+                  alt="Focus Group: Kid Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/focus-group-kid.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
                                 <article class="card">
           <div class="body">
@@ -1117,6 +1137,7 @@
 
 </body>
 </html>
+
 
 
 
