--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -450,6 +450,25 @@
           </div>
         </article>
 
+
+                              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Real Life Role Plays 1</h3>
+              <p>Spin for a scenario. Brainstorm ideas or solutions as a group, then act it out. Afterward, reflect on what worked, what didn’t, and what other choices could have been made. A powerful way to build confidence, problem-solving, and real-life communication skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/real-life-role-plays1-icon.png?raw=true"
+                  alt="Real Life Role Plays 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/real-life-role-plays1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
   <article class="card">
           <div class="body">
             <div class="text">
@@ -1137,6 +1156,7 @@
 
 </body>
 </html>
+
 
 
 
