--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -394,6 +394,25 @@
         </article>
 
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Critics' Corner</h3>
+              <p>Students become critics of things they already know—like movies, music, apps, games, or food—or of something they’ve just read, watched, or learned in class. They give ratings, share reviews, and explain their opinions, with options like short written reviews, live “critic shows,” or debates between reviewers. A fun way to practice speaking, writing, persuasion, and critical thinking while connecting English to real experiences.</p>
+            <br><p><strong>You can connect this game to classroom learning by using a story, article, or other text students are reading in class—or by choosing material from the Outreach360 Library to review and respond to.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/critics-corner-icon.png?raw=true"
+                  alt="Word Association icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+            
             
                                             <article class="card">
           <div class="body">
@@ -1156,6 +1175,7 @@
 
 </body>
 </html>
+
 
 
 
