--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -399,7 +399,7 @@
             <div class="text">
               <h3>Critics' Corner</h3>
               <p>Students become critics of things they already know—like movies, music, apps, games, or food—or of something they’ve just read, watched, or learned in class. They give ratings, share reviews, and explain their opinions, with options like short written reviews, live “critic shows,” or debates between reviewers. A fun way to practice speaking, writing, persuasion, and critical thinking while connecting English to real experiences.</p>
-            <br><p><strong>You can connect this game to classroom learning by using a story, article, or other text students are reading in class—or by choosing material from the Outreach360 Library to review and respond to.</strong></p>
+            <br><p><strong>Connect this game to classroom learning with a story, article, or text students are reading—or by choosing material from the Outreach360 Library.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1175,6 +1175,7 @@
 
 </body>
 </html>
+
 
 
 
