--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -392,24 +392,25 @@
         </article>
 
 
-                                                        <article class="card">
+                    <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Shark Tank: Teen Edition</h3>
-              <p>Spin for products, services, or projects. Students design and pitch them to a panel of “sharks” (classmates or teacher). Choose how you play! Add twists like <strong>speed pitches</strong> (only 60 seconds), <strong>written pitches</strong>, or <strong>team roles</strong> (designer, marketer, finance, etc. each present part of the pitch). Boost creativity with <strong>slogans, jingles, posters, or commercials</strong>. Add challenges such as <strong>changing the audience</strong> (kids, parents, teachers, world leaders) or <strong>demanding changes</strong> (make it eco-friendly, cheaper, or cooler). A lively way to build speaking, writing, persuasion, creativity, and critical thinking!</p>
+              <h3>Critics' Corner</h3>
+              <p>Students become critics of things they already know—like movies, music, apps, games, or food—or of something they’ve just read, watched, or learned in class. They give ratings, share reviews, and explain their opinions, with options like <strong>short written reviews, live “critic shows,” or debates between reviewers</strong>. A fun way to practice speaking, writing, persuasion, and critical thinking while connecting English to real experiences.</p>
+            <br><p><strong>Connect this game to classroom learning with a story, article, or text students are reading—or by choosing material from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a> (you will need to create a free account).</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/shark-tank-teen-icon.png?raw=true"
-                  alt="Shark Tank: Teen Edition icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/critics-corner-icon.png?raw=true"
+                  alt="Word Association icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="http://outreach360-inc.github.io/games/shark-tank-teen.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
         </article>
-
+            
 
                                                                     <article class="card">
           <div class="body">
@@ -429,6 +430,25 @@
             </div>
           </div>
         </article>
+
+                                                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Shark Tank: Teen Edition</h3>
+              <p>Spin for products, services, or projects. Students design and pitch them to a panel of “sharks” (classmates or teacher). Choose how you play! Add twists like <strong>speed pitches</strong> (only 60 seconds), <strong>written pitches</strong>, or <strong>team roles</strong> (designer, marketer, finance, etc. each present part of the pitch). Boost creativity with <strong>slogans, jingles, posters, or commercials</strong>. Add challenges such as <strong>changing the audience</strong> (kids, parents, teachers, world leaders) or <strong>demanding changes</strong> (make it eco-friendly, cheaper, or cooler). A lively way to build speaking, writing, persuasion, creativity, and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/shark-tank-teen-icon.png?raw=true"
+                  alt="Shark Tank: Teen Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/shark-tank-teen.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
 
 
                                 <article class="card">
@@ -1379,6 +1399,7 @@
 
 </body>
 </html>
+
 
 
 
