--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -198,6 +198,24 @@
           </div>
         </article>
 
+                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Jeopardy – Idiom Edition</h3>
+              <p>Students compete in a game-show style quiz focused on idioms. Depending on the question, they might guess the meaning, make a sentence, continue a chain story, act out a role-play, or describe what happened before or after someone said the idiom. Teams choose questions by point value and race for the highest score. A lively way to practice vocabulary, creativity, and real-world language use.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/jeopardy-icon.png?raw=true"
+                  alt="Jeopardy – Idiom Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/jeopardy-idiom.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
                  <article class="card">
           <div class="body">
@@ -1399,6 +1417,7 @@
 
 </body>
 </html>
+
 
 
 
