--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -298,17 +298,17 @@
         <article class="card">
           <div class="body">
             <div class="text">
-              <h3>The Q&A Game</h3>
-              <p>Get students speaking or writing! Spin a question. Students practice forming complete sentences. Great for warm-ups, fluency practice, and building confidence. <strong>Best suited for Hand in Hand 3–4, but easily adaptable for higher levels—great practice for students needing extra support in levels 5–6.</strong></p>
+              <h3>Simon Says</h3>
+              <p>A fast, active listening game where students follow commands only if they begin with “Simon says.” If the leader says “Simon says touch your nose,” students do it; if the leader just says “Touch your nose” and someone moves, they’re out. A fun way to practice listening, focus, and quick reactions while reviewing vocabulary for actions, body parts, and more.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/qa-icon.png?raw=true"
-                  alt="The Q&A Game icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/simon-says-icon.png?raw=true"
+                  alt="Simon Says icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://outreach360-inc.github.io/games/qa.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
         </article>
@@ -638,6 +638,7 @@
 
 </body>
 </html>
+
 
 
 
