--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -434,6 +434,25 @@
             </div>
           </div>
         </article>
+
+
+                   <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Last Word</h3>
+              <p>Spin for a topic, then work together to build a shared opinion. Each person adds one short reason or idea without repeating. The group keeps going until no one can think of something new. Great for speaking and critical thinking.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/last-word-icon.png?raw=true"
+                  alt="The Last Word icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/last-word.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
             
       <article class="card">
           <div class="body">
@@ -1178,6 +1197,7 @@
 
 </body>
 </html>
+
 
 
 
