--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -409,6 +409,25 @@
           </div>
         </article>
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>What's Going On in This Graph?</h3>
+              <p>Each week, The New York Times shares a new graph, map, or chart for students to notice, wonder, and discuss. On Thursdays, it posts additional background information and analysis + a new graph. Teachers can use current or past graphs. Great for describing charts and graphs and preparing for IELTS (English proficiency test).</p>
+            <br><p><strong>Gamify it:</strong>Award points for clear answers or strong use of <a href="https://outreach360-inc.github.io/games/describing-trends.html" target="_blank">vocabulary and grammar</a>. Have students ask and answer questions about the graph, give them 30–60 seconds to describe as much as they can, or challenge them to compete for the best 150-word paragraph.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/graph-icon.png?raw=true"
+                  alt="Combo Challenge icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://www.nytimes.com/column/whats-going-on-in-this-graph" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
 
                     <article class="card">
           <div class="body">
@@ -1435,6 +1454,7 @@
 
 </body>
 </html>
+
 
 
 
