--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -420,7 +420,7 @@
               <div class="art-frame">
                 <img
                   src="https://github.com/Outreach360-Inc/games/blob/main/graph-icon.png?raw=true"
-                  alt="Combo Challenge icon"
+                  alt="What's Going On in This Graph? icon"
                   loading="lazy" decoding="async">
               </div>
               <a href="https://www.nytimes.com/column/whats-going-on-in-this-graph" target="_blank"><button class="play-btn">PLAY</button></a>
@@ -1454,6 +1454,7 @@
 
 </body>
 </html>
+
 
 
 
