--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -239,6 +239,42 @@
                               <article class="card">
           <div class="body">
             <div class="text">
+              <h3>Phrasal Frenzy</h3>
+              <p>Spin to get a phrasal verb, then use it to create a sentence or question. To take it further, use different tenses, find a picture and make a meme, write a mini-dialogue, act out a short skit, or design a quick social media-style post. If you don’t know the phrasal verb, <a href="https://www.oxfordlearnersdictionaries.com/us" target="_blank">look it up in the dictionary</a>. A fun, flexible way to build speaking, grammar, and vocabulary confidence while practicing phrasal verbs.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/phrasal-frenzy-icon.png?raw=true"
+                  alt="Combo Challenge icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/phrasal-frenzy.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Combo Challenge</h3>
+              <p>Spin for a base word and race (or take turns) to build strong word combos—collocations and phrasal verbs like “make a decision” or “run into trouble”—boosting vocabulary, fluency, and natural speaking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/combo-icon.png?raw=true"
+                  alt="Combo Challenge icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/combo-challenge.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                              <article class="card">
+          <div class="body">
+            <div class="text">
               <h3>Description Detective 2</h3>
               <p>Students guess mystery words using clues! While only one answer is indicated, other answers with the same meaning are accepted. Great for building vocabulary and critical thinking!</p>
             </div>
@@ -390,24 +426,6 @@
           </div>
         </article>
 
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Combo Challenge</h3>
-              <p>Spin for a base word and race (or take turns) to build strong word combos—collocations and phrasal verbs like “make a decision” or “run into trouble”—boosting vocabulary, fluency, and natural speaking!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/combo-icon.png?raw=true"
-                  alt="Combo Challenge icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/combo-challenge.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
 
                   <article class="card">
           <div class="body">
@@ -1454,6 +1472,7 @@
 
 </body>
 </html>
+
 
 
 
