--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -430,6 +430,24 @@
                   <article class="card">
           <div class="body">
             <div class="text">
+              <h3>Beat the Clock — Future Edition</h3>
+              <p>Spin for an action/event, a time phrase, and a <a href="http://outreach360-inc.github.io/games/beat-clock-future.pdf" target="_blank">future tense (in the past, simple, continuous, perfect, or perfect continuous)</a>. Students write as many <strong>affirmative, negative, or interrogative sentences</strong> as possible before time runs out. They can <strong>adjust the action or time phrase</strong> to make the sentence natural and <strong>add details</strong> to keep each one unique. <strong>Award points</strong> for each correct sentence. For a twist, add extra time for <strong>short stories, dialogues, or news reports</strong>, or <strong>hide a spinner</strong> and let students choose one element themselves. Great for building speed, accuracy, and confidence with future tenses.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/beat-clock-icon.png?raw=true"
+                  alt="Beat the Clock — Future Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <a href="http://outreach360-inc.github.io/games/beat-clock-future.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                  <article class="card">
+          <div class="body">
+            <div class="text">
               <h3>What's Going On in This Graph?</h3>
               <p>Each week, The New York Times shares a new graph, map, or chart for students to notice, wonder, and discuss. On Thursdays, it posts additional background information and analysis + a new graph. Teachers can use current or past graphs. Great for describing charts and graphs and preparing for IELTS (English proficiency test).</p>
             <br><p><strong>Gamify it:</strong> Award points for clear answers or strong use of <a href="https://outreach360-inc.github.io/games/describing-trends.pdf" target="_blank">vocabulary and grammar</a>. Have students ask and answer questions about the graph, give them 30–60 seconds to describe as much as they can, or challenge them to compete for the best 150-word paragraph.</p>
@@ -1472,6 +1490,7 @@
 
 </body>
 </html>
+
 
 
 
