--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -313,6 +313,43 @@
           </div>
         </article>
 
+                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Find It!</h3>
+              <p>Teacher calls out a word or category (something blue, an animal, something you can eat). Students have 30–60 seconds to find the item in their home and show it on camera. They say the word or make a short sentence (“It’s my blue pen”). <strong>Use categories with simple vocabulary relevant to your unit.</strong> Great for practicing vocabulary and simple sentences in an active way.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/find-it-icon.png?raw=true"
+                  alt="Find It! icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Show & Tell</h3>
+              <p>Students choose an item from home and show it to the group. They describe it in English—(e.g. what it is, why they like it, where it’s from, or a short story about it). Classmates can ask simple follow-up questions. <strong>Adjust the level of detail to your students’ abilities.</strong> Great for building speaking confidence, vocabulary, and conversation skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/show-tell-icon.png?raw=true"
+                  alt="Show & Tell icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+            
             
         <article class="card">
           <div class="body">
@@ -638,6 +675,7 @@
 
 </body>
 </html>
+
 
 
 
