--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -316,14 +316,14 @@
                     <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Find It!</h3>
+              <h3>Find It! 1</h3>
               <p>Teacher calls out a word or category (something blue, an animal, something you can eat). Students have 30–60 seconds to find the item in their home and show it on camera. They say the word or make a short sentence (“It’s my blue pen”). <strong>Use categories with simple vocabulary relevant to your unit.</strong> Great for practicing vocabulary and simple sentences in an active way.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
                   src="https://github.com/Outreach360-Inc/games/blob/main/find-it-icon.png?raw=true"
-                  alt="Find It! icon"
+                  alt="Find It! 1 icon"
                   loading="lazy" decoding="async">
               </div>
               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
@@ -675,6 +675,7 @@
 
 </body>
 </html>
+
 
 
 
