--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -505,6 +505,43 @@
             </div>
           </div>
         </article>
+
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Find It! 2</h3>
+              <p>Spin for a prompt. Students have 1-2 minutes to find the item in their home and show it on camera. They say the word and describe it in detail. <strong>If needed, use visual support to help students understand the prompts.</strong> Great for practicing vocabulary and descriptions in an active way.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/find-it2-icon.png?raw=true"
+                  alt="Find It! 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+             <a href="https://outreach360-inc.github.io/games/find-it2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Show & Tell</h3>
+              <p>Students choose an item from home and show it to the group. They describe it in English—(e.g. what it is, why they like it, where it’s from, or a short story about it). Classmates can ask follow-up questions. Great for building speaking confidence, vocabulary, and conversation skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/show-tell-icon.png?raw=true"
+                  alt="Show & Tell icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
             
         <article class="card">
           <div class="body">
@@ -822,6 +859,7 @@
 
 </body>
 </html>
+
 
 
 
