--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -662,6 +662,24 @@
           </div>
         </article>
 
+                     <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Show & Tell</h3>
+              <p>Students choose an item from home and show it to the group. They describe it in English—(e.g. what it is, why they like it, where it’s from, or a short story about it). Classmates can ask follow-up questions. Great for building speaking confidence, vocabulary, and conversation skills.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/show-tell-icon.png?raw=true"
+                  alt="Show & Tell icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1197,6 +1215,7 @@
 
 </body>
 </html>
+
 
 
 
