--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -182,6 +182,25 @@
         </article>
 
 
+                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>What Is It?</h3>
+              <p>Show students close-up, cropped, or unusual photos of everyday things. They guess what the object is, describing what they see (“It looks like metal,” “Maybe it’s a coin”). Use your own phots or the ones provided. Great for warm-ups!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/what-is-it-icon.png?raw=true"
+                  alt="What Is It? icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://learnenglishteens.britishcouncil.org/study-break/photo-zone/what-it?page=0" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
         <article class="card">
           <div class="body">
             <div class="text">
@@ -1215,6 +1234,7 @@
 
 </body>
 </html>
+
 
 
 
