--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -681,6 +681,24 @@
           </div>
         </article>
 
+                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Find It! 2</h3>
+              <p>Spin for a prompt. Students have 1-2 minutes to find the item in their home and show it on camera. They say the word and describe it in detail. <strong>If needed, use visual support to help students understand the prompts.</strong> Great for practicing vocabulary and descriptions in an active way.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/find-it2-icon.png?raw=true"
+                  alt="Find It! 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+             <a href="https://outreach360-inc.github.io/games/find-it2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                      <article class="card">
           <div class="body">
             <div class="text">
@@ -1234,6 +1252,7 @@
 
 </body>
 </html>
+
 
 
 
