--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -312,6 +312,24 @@
         </article>
 
 
+                                                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Sentence Survivor</h3>
+              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit or a <a href="https://www.britannica.com/games/revealed" target="_blank">word of the day</a>. Great for reviewing vocabulary, grammar, and speaking under pressure.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/sentence-survivor-icon.png?raw=true"
+                  alt="Sentence Survivor icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+            
                                         <article class="card">
           <div class="body">
             <div class="text">
@@ -329,6 +347,7 @@
             </div>
           </div>
         </article>
+
 
             <article class="card">
           <div class="body">
@@ -1490,6 +1509,7 @@
 
 </body>
 </html>
+
 
 
 
