--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -316,7 +316,7 @@
           <div class="body">
             <div class="text">
               <h3>Sentence Survivor</h3>
-              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit or a <a href="https://www.britannica.com/games/revealed" target="_blank">word of the day</a>. Great for reviewing vocabulary, grammar, and speaking under pressure.</p>
+              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit or a <a href="https://www.vocabulary.com/word-of-the-day" target="_blank">word of the day</a>. Great for reviewing vocabulary, grammar, and speaking under pressure.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1509,6 +1509,7 @@
 
 </body>
 </html>
+
 
 
 
