--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -912,6 +912,23 @@
           </div>
         </article>
 
+                                                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Sentence Survivor</h3>
+              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit or a <a href="https://vocabularyninja.co.uk/gallery/word-of-the-day-2-gallery" target="_blank">word of the day</a>. Great for reviewing vocabulary, grammar, and speaking under pressure.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/sentence-survivor-icon.png?raw=true"
+                  alt="Sentence Survivor icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
 
                                                     <article class="card">
           <div class="body">
@@ -1252,6 +1269,7 @@
 
 </body>
 </html>
+
 
 
 
