--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -280,7 +280,7 @@
           <div class="body">
             <div class="text">
               <h3>Sentence Survivor</h3>
-              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit. Great for reviewing vocabulary, grammar, and speaking under pressure.</p>
+              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit. Great for reviewing vocabulary, grammar, and speaking under pressure.<strong> Best suited for Hand in Hand 3–4 as lower levels know limited volcabulary and grammar structures.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -693,6 +693,7 @@
 
 </body>
 </html>
+
 
 
 
