--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -912,6 +912,26 @@
           </div>
         </article>
 
+
+            
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Beat the Clock</h3>
+              <p>The teacher gives a topic, word, or grammar focus. Students race against a timer to write as many correct sentences as they can before time runs out. Award points for each correct sentence.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/beat-clock-icon.png?raw=true"
+                  alt="Beat the Clock icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                                                                 <article class="card">
           <div class="body">
             <div class="text">
@@ -1269,6 +1289,7 @@
 
 </body>
 </html>
+
 
 
 
