--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -918,7 +918,7 @@
           <div class="body">
             <div class="text">
               <h3>Beat the Clock</h3>
-              <p>The teacher gives a topic, word, or grammar focus. Students race against a timer to write as many correct sentences as they can before time runs out. Award points for each correct sentence.</p>
+              <p>The teacher gives a topic, word, or grammar focus. Students race against a timer to write as many correct sentences as they can before time runs out. Award points for each correct sentence. Great for reviewing vocabulary, grammar, and writing under pressure.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1289,6 +1289,7 @@
 
 </body>
 </html>
+
 
 
 
