--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -488,6 +488,24 @@
           </div>
         </article>
 
+            
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Beat the Clock</h3>
+              <p>The teacher gives a topic, word, or grammar focus. Students race against a timer to write as many correct sentences as they can before time runs out. Award points for each correct sentence. Great for reviewing vocabulary, grammar, and writing under pressure.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/beat-clock-icon.png?raw=true"
+                  alt="Beat the Clock icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
 
                   <article class="card">
           <div class="body">
@@ -879,6 +897,7 @@
 
 </body>
 </html>
+
 
 
 
