--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -313,6 +313,25 @@
           </div>
         </article>
 
+
+                                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Sentence Survivor</h3>
+              <p>Students go in rotation, each saying a correct sentence with the target word, grammar, or topic. If a student makes a mistake, they’re “out.” Play continues around the group until only one student remains. Use with content from your unit. Great for reviewing vocabulary, grammar, and speaking under pressure.<strong> Best suited for Hand in Hand 3–4 as lower levels know limited vocabulary and grammar.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/sentence-survivor-icon.png?raw=true"
+                  alt="Spelling Survivor icon"
+                  loading="lazy" decoding="async">
+              </div>
+                               <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank"><button class="play-btn">Scope & Sequence</button></a>
+            </div>
+          </div>
+        </article>
+
                      <article class="card">
           <div class="body">
             <div class="text">
@@ -713,6 +732,7 @@
 
 </body>
 </html>
+
 
 
 
